# frac

./: LICENSE  README.md  pyproject.toml
frac/src/: example.py  frac.py
src/frac_technstuff1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
