[project]
name = "frac"
version = "0.0.1"
authors = [
  { name="technstuff1", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/technstuff1/frac"
Issues = "https://github.com/technstuff1/frac/issues"